website: more FAQ updates

--- a/index.html
+++ b/index.html
@@ -743,12 +743,18 @@
                     </div>
                 </div> <!-- }}}2 --->
 
-                <input id="faq_jon" class="toggle-button" type="checkbox"> <!-- {{{2 --->
-                <label for="faq_jon" class="toggle-label" tabindex="0">Who made this website? How do I contact them?</label>
+                <input id="faq_contact" class="toggle-button" type="checkbox"> <!-- {{{2 --->
+                <label for="faq_contact" class="toggle-label" tabindex="0">Who made this website? How do I contact them?</label>
                 <div class="toggle-content">
                     <div class="toggle-content-inner">
-                        <p>The GENESIS website was written, and is maintained, by Jonathan Yong; that&rsquo;s me! As of the time of writing, I am a PhD student at Oxford, and have been working with Tim Claridge (Oxford) and Ēriks Kupče (Bruker UK) on developing NOAH experiments.</p>
-                        <p>If you have feedback or suggestions, please feel free to email <span class="ms">jonathan.yong[at]chem.ox.ac.uk</span>, or create an issue on the <a href="https://github.com/yongrenjie/genesis">GitHub repository</a>. (The latter will still work after I graduate.)</p>
+                        <p>The GENESIS website was written, and is maintained, by Jonathan Yong; that&rsquo;s me! As of the time of writing, I am a PhD student at Oxford, and have been working with Tim Claridge (Oxford) and Ēriks Kupče (Bruker UK) on developing NOAH experiments (amongst other stuff).</p>
+                        <p>If you have feedback or suggestions, please feel free to create an issue on the <a href="https://github.com/yongrenjie/genesis">GitHub repository</a>, or email one or more of us at:</p>
+                        <ul>
+                            <li><span class="ms">jonathan.yong[at]chem.ox.ac.uk</span></li>
+                            <li><span class="ms">tim.claridge[at]chem.ox.ac.uk</span></li>
+                            <li><span class="ms">eriks.kupce[at]bruker.com</span></li>
+                        </ul>
+                        <p>You can also get hold of me on <a href="https://twitter.com/jonyrj95">Twitter</a>, if you prefer that.</p>
                     </div>
                 </div> <!-- }}}2 --->
 
