--- a/index.html
+++ b/index.html
@@ -719,12 +719,7 @@
                 <div class="toggle-content">
                     <div class="toggle-content-inner">
                         <p>The GENESIS website was written, and is maintained, by Jonathan Yong; that&rsquo;s me! As of the time of writing, I am a PhD student at Oxford, and have been working with Tim Claridge (Oxford) and Ēriks Kupče (Bruker UK) on developing NOAH experiments.</p>
-                        <p>If you have feedback or suggestions, please feel free to create an issue on the <a href="https://github.com/yongrenjie/genesis">GitHub repository</a>, or email one or more of us at:</p>
-                        <ul>
-                            <li><span class="ms">jonathan.yong[at]chem.ox.ac.uk</span></li>
-                            <li><span class="ms">tim.claridge[at]chem.ox.ac.uk</span></li>
-                            <li><span class="ms">eriks.kupce[at]bruker.com</span></li>
-                        </ul>
+                        <p>If you have feedback or suggestions, please feel free to email <span class="ms">jonathan.yong[at]chem.ox.ac.uk</span>, or create an issue on the <a href="https://github.com/yongrenjie/genesis">GitHub repository</a>. (The latter will still work after I graduate.)</p>
                     </div>
                 </div> <!-- }}}2 --->
 
