pprogs, website: implement SAPPHIRE pure shift

--- a/index.html
+++ b/index.html
@@ -474,8 +474,16 @@
                                 <label for="H_PSYCHE">H_PSYCHE</label>
                             </li>
                             <li>
+                                <input type="radio" name="h1" id="H_PSYCHE_SAP"></input>
+                                <label for="H_PSYCHE_SAP">H_PSYCHE_SAP</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="h1" id="H_PSYCHE_TSE"></input>
                                 <label for="H_PSYCHE_TSE">H_PSYCHE_TSE</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_PSYCHE_TSAP"></input>
+                                <label for="H_PSYCHE_TSAP">H_PSYCHE_TSAP</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="H_TT_CN"></input>
