website: add JACS Au paper

--- a/index.html
+++ b/index.html
@@ -726,6 +726,7 @@
                             <li>Kupče, Ē.; Claridge, T. D. W. New NOAH modules for structure elucidation at natural isotopic abundance. <i>J. Magn. Reson.</i> <b>2019,</b> <i>307,</i> 106568. <a href="https://doi.org/10.1016/j.jmr.2019.106568">DOI: 10.1016/j.jmr.2019.106568</a>.</li>
                             <li>Hansen, A. L.; Kupče, Ē.; Li, D.-W.; Bruschweiler-Li, L.; Wang, C.; Brüschweiler, R. 2D NMR-Based Metabolomics with HSQC/TOCSY NOAH Supersequences. <i>Anal. Chem.</i> <b>2021,</b> <i>93</i> (15), 6112–6119. DOI: <a href="https://doi.org/10.1021/acs.analchem.0c05205">10.1021/acs.analchem.0c05205</a>.</li>
                             <li>Yong, J. R. J.; Hansen, A. L.; Kupče, Ē.; Claridge, T. D. W. Increasing sensitivity and versatility in NMR supersequences with new HSQC-based modules. <i>J. Magn. Reson.</i> <b>2021,</b> <i>329,</i> 107027. DOI: <a href="https://doi.org/10.1016/j.jmr.2021.107027">10.1016/j.jmr.2021.107027</a>.</li>
+                            <li>Kupče, Ē.; Yong, J. R. J.; Widmalm, G.; Claridge, T. D. W. Parallel NMR Supersequences: Ten Spectra in a Single Measurement. <i>JACS Au</i> <b>2021,</b> <i>1</i> (11), 1892–1897. DOI: <a href="https://doi.org/10.1021/jacsau.1c00423">10.1021/jacsau.1c00423</a>.</li>
                         </ol>
                     </div>
                 </div> <!-- }}}2 --->
