pprogs: a variety of HMBC gradient schemes

--- a/index.html
+++ b/index.html
@@ -69,16 +69,24 @@
                                 <label for="C_HMBC_NOF">C_HMBC_NOF</label>
                             </li>
                             <li>
-                                <input type="radio" name="hmbc" id="C_HMBC_CFG"></input>
-                                <label for="C_HMBC_CFG">C_HMBC_CFG</label>
-                            </li>
-                            <li>
                                 <input type="radio" name="hmbc" id="C_HMBC_CFDD"></input>
                                 <label for="C_HMBC_CFDD">C_HMBC_CFDD</label>
                             </li>
                             <li>
                                 <input type="radio" name="hmbc" id="C_HMBC_CF_K"></input>
                                 <label for="C_HMBC_CF_K">C_HMBC_CF_K</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="C_HMBC_CFGA"></input>
+                                <label for="C_HMBC_CFGA">C_HMBC_CFGA</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="C_HMBC_CFGB"></input>
+                                <label for="C_HMBC_CFGB">C_HMBC_CFGB</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="C_HMBC_CFGC"></input>
+                                <label for="C_HMBC_CFGC">C_HMBC_CFGC</label>
                             </li>
                             <!-- end HMBC modules }}}2 -->
                         </ul>
