pprogs: add 1,1-ADEQUATE module (bugged, see commit message)
d28 isn't automatically decremented by the pulse programme

--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@
                                 <input type="radio" name="c13" id="C_SEHSQCJ_K"></input>
                                 <label for="C_SEHSQCJ_K">C_SEHSQCJ_K</label>
                             </li>
+                            <li>
+                                <input type="radio" name="c13" id="C_ADEQ"></input>
+                                <label for="C_ADEQ">C_ADEQ</label>
+                            </li>
                             <!-- end 13C modules }}}2 -->
                         </ul>
                     </div>
