pprogs: add N_HMBC_CF

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                                 <input type="radio" name="hmbc" id="C_HMBC_CFGC"></input>
                                 <label for="C_HMBC_CFGC">C_HMBC_CFGC</label>
                             </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="N_HMBC_CF"></input>
+                                <label for="N_HMBC_CF">N_HMBC_CF</label>
+                            </li>
                             <!-- end HMBC modules }}}2 -->
                         </ul>
                     </div>
