pprogs: add 15N IMPEACH-MBC
(even though its performance doesn't look very great -- not sure why)

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                                 <input type="radio" name="hmbc" id="N_HMBC_CF"></input>
                                 <label for="N_HMBC_CF">N_HMBC_CF</label>
                             </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="N_HMBC_CFIM"></input>
+                                <label for="N_HMBC_CFIM">N_HMBC_CFIM</label>
+                            </li>
                             <!-- end HMBC modules }}}2 -->
                         </ul>
                     </div>
