--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                                 <input type="radio" name="hmbc" id="N_HMBC_CFIM"></input>
                                 <label for="N_HMBC_CFIM">N_HMBC_CFIM</label>
                             </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="N_HMBC_CNF"></input>
+                                <label for="N_HMBC_CNF">N_HMBC_CNF</label>
+                            </li>
                             <!-- end HMBC modules }}}2 -->
                         </ul>
                     </div>
