pprogs: add H_COTO_STDS module

--- a/index.html
+++ b/index.html
@@ -482,6 +482,10 @@
                                 <label for="H_COTO_ST">H_COTO_ST</label>
                             </li>
                             <li>
+                                <input type="radio" name="h1" id="H_COTO_STDS"></input>
+                                <label for="H_COTO_STDS">H_COTO_STDS</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="h1" id="H_JRES"></input>
                                 <label for="H_JRES">H_JRES</label>
                             </li>
