website: add new citations to FAQ

--- a/index.html
+++ b/index.html
@@ -736,11 +736,16 @@
                 <label for="faq_cite" class="toggle-label" tabindex="0">What papers should I cite / where can I find out more about NOAH experiments?</label>
                 <div class="toggle-content">
                     <div class="toggle-content-inner">
-                        <p>Thanks for asking! If you&rsquo;re just looking for a citation for the supersequence you used, the pulse programmes downloaded from this website will already suggest the relevant references. On the other hand, if you&rsquo;re interested in reading more, the original NOAH paper is:</p>
+                        <p>Thanks for asking! If you&rsquo;re just looking for a citation for the supersequence you used, the pulse programmes downloaded from this website will already suggest the relevant references, so you can directly copy those.</p>
+                        <p>On the other hand, if you&rsquo;re interested in reading more, the paper accompanying the GENESIS website is:</p>
                         <ol class="citation-start">
+                            <li>Yong, J. R. J.; Kupče, Ē.; Claridge, T. D. W. Modular Pulse Program Generation for NMR Supersequences. <i>Anal. Chem.</i> <b>2022,</b> <a href="https://doi.org/10.1021/acs.analchem.1c04964">DOI: 10.1021/acs.analchem.1c04964</a>.</li>
+                        </ol>
+                        <p>and the original NOAH paper is:</p>
+                        <ol class="citation">
                             <li>Kupče, Ē.; Claridge, T. D. W. NOAH: NMR Supersequences for Small Molecule Analysis and Structure Elucidation. <i>Angew. Chem. Int. Ed.</i> <b>2017,</b> <i>56</i> (39), 11779–11783. <a href="https://doi.org/10.1002/anie.201705506">DOI: 10.1002/anie.201705506</a>.</li>
                         </ol>
-                        <p>and there are a couple of reviews which cover the NOAH technique:</p>
+                        <p>There are also a couple of reviews which cover the NOAH technique:</p>
                         <ol class="citation">
                             <li>Kupče, Ē.; Frydman, L.; Webb, A.; Yong, J. R. J.; Claridge, T. D. W. Parallel nuclear magnetic resonance spectroscopy.<i> Nat. Rev. Methods Primers</i> <b>2021,</b> <i>1,</i> No. 27. <a href="https://doi.org/10.1038/s43586-021-00024-3">DOI: 10.1038/s43586-021-00024-3</a>.</li>
                             <li>Kupče, Ē.; Mote, K. R.; Webb, A. G.; Madhu, P. K.; Claridge, T. D. W. Multiplexing experiments in NMR and multi-nuclear MRI.<i> Prog. Nucl. Magn. Reson. Spectrosc.</i> <b>2021,</b> <i>124–125,</i> 1–56. <a href="https://doi.org/10.1016/j.pnmrs.2021.03.001">DOI: 10.1016/j.pnmrs.2021.03.001</a>.</li>
