--- a/index.html
+++ b/index.html
@@ -810,6 +810,7 @@
                             <li><span class="ms">eriks.kupce[at]bruker.com</span></li>
                         </ul>
                         <p>You can also get hold of me on <a href="https://twitter.com/jonyrj95">Twitter</a>, if you prefer that.</p>
+                        <p>Finally, if you're interested, we published a paper describing this website (<a href="https://doi.org/10.1021/acs.analchem.1c04964">DOI: 10.1021/acs.analchem.1c04964</a>).
                     </div>
                 </div> <!-- }}}2 --->
 
