website: add button for scripts download

--- a/index.html
+++ b/index.html
@@ -547,11 +547,14 @@
                 ...or choose your own: <input id="manual-modules" type="text" placeholder="enter module codes separated by spaces..." size=60 maxlength=1000>
                 </div><!-- /manual-input }}}1 -->
 
-            <div id="buttons"> <!-- {{{1 -->
+            <div class="buttons" id="buttons"> <!-- {{{1 -->
                 <input id="reset_button" type="button" value="Reset all">
                 <input id="download_button" type="button" value="Download pulse programme">
                 <input id="faq_button" type="button" value="Read the FAQ">
             </div><!-- /buttons }}}1 -->
+            <div class="buttons" id="buttons-script"> <!-- {{{1 -->
+                <input id="download_scripts_button" type="button" value="Download processing scripts">
+            </div><!-- /buttons-script }}}1 -->
 
             <h2>Pulse programme text</h2> <!-- {{{1 --->
             <div id="pulprog">
