website, pprogs: add full reference for AnChem paper

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                         <p>Thanks for asking! If you&rsquo;re just looking for a citation for the supersequence you used, the pulse programmes downloaded from this website will already suggest the relevant references, so you can directly copy those.</p>
                         <p>On the other hand, if you&rsquo;re interested in reading more, the paper accompanying the GENESIS website is:</p>
                         <ol class="citation-start">
-                            <li>Yong, J. R. J.; Kupče, Ē.; Claridge, T. D. W. Modular Pulse Program Generation for NMR Supersequences. <i>Anal. Chem.</i> <b>2022,</b> <a href="https://doi.org/10.1021/acs.analchem.1c04964">DOI: 10.1021/acs.analchem.1c04964</a>.</li>
+                            <li>Yong, J. R. J.; Kupče, Ē.; Claridge, T. D. W. Modular Pulse Program Generation for NMR Supersequences. <i>Anal. Chem.</i> <b>2022,</b> <i>94</i> (4), 2271–2278. <a href="https://doi.org/10.1021/acs.analchem.1c04964">DOI: 10.1021/acs.analchem.1c04964</a>.</li>
                         </ol>
                         <p>and the original NOAH paper is:</p>
                         <ol class="citation">
