pprogs, website: add N_HMBC_CFQF module

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                                 <label for="N_HMBC_CF">N_HMBC_CF</label>
                             </li>
                             <li>
+                                <input type="radio" name="hmbc" id="N_HMBC_CFQF"></input>
+                                <label for="N_HMBC_CFQF">N_HMBC_CFQF</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="hmbc" id="N_HMBC_CFIM"></input>
                                 <label for="N_HMBC_CFIM">N_HMBC_CFIM</label>
                             </li>
