--- a/index.html
+++ b/index.html
@@ -327,6 +327,10 @@
                                 <label for="C_HMQC">C_HMQC</label>
                             </li>
                             <li>
+                                <input type="radio" name="c13" id="C_HSQC_K"></input>
+                                <label for="C_HSQC_K">C_HSQC_K</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="c13" id="C_HSQCJ_K"></input>
                                 <label for="C_HSQCJ_K">C_HSQCJ_K</label>
                             </li>
@@ -528,6 +532,10 @@
                             <li>
                                 <input type="radio" name="h1" id="H_CC_T"></input>
                                 <label for="H_CC_T">H_CC_T</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_N_T"></input>
+                                <label for="H_N_T">H_N_T</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="H_R_T"></input>
