website: Eriks is now enjoying post-Bruker life

--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                         <ul>
                             <li><span class="ms">jyong[at]turing.ac.uk</span></li>
                             <li><span class="ms">tim.claridge[at]chem.ox.ac.uk</span></li>
-                            <li><span class="ms">eriks.kupce[at]bruker.com</span></li>
+                            <li>(we can forward anything to Ēriks if needed)</li>
                         </ul>
                         <p>Finally, if you're interested, we published a paper describing this website (<a href="https://doi.org/10.1021/acs.analchem.1c04964">DOI: 10.1021/acs.analchem.1c04964</a>).
                     </div>
