--- a/index.html
+++ b/index.html
@@ -820,19 +820,14 @@
                 <label for="faq_contact" class="toggle-label" tabindex="0">Who made this website? How do I contact them?</label>
                 <div class="toggle-content">
                     <div class="toggle-content-inner">
-                        <p>The GENESIS website was written, and is maintained, by Jonathan Yong (that&rsquo;s me).</p>
+                        <p>The GENESIS website was written by Jonathan Yong (that&rsquo;s me).</p>
 
                         <p>I was a PhD student at Oxford, where I worked on the development of NOAH experiments (amongst other stuff) with Tim Claridge and Ēriks Kupče.
-                        As of January 2023, I&rsquo;m now employed at the <a href="https://www.turing.ac.uk/research-engineering">Research Engineering Group</a> at The Alan Turing Institute.
-                        Thus, please don&rsquo;t expect any huge developments in this website.
-                        However, I am still happy to fix bugs where necessary, as long as you are willing to do some back-and-forth to troubleshoot any issues (as I no longer have access to spectrometers).</p>
+                        Since my graduation, however, I&rsquo;ve moved on to other things and am no longer working on NMR.
+                        Consequently, there will be no more updates to this website.</p>
 
-                        <p>To get in touch, please feel free to create an issue on the <a href="https://github.com/yongrenjie/genesis">GitHub repository</a>, or email one or more of us at:</p>
-                        <ul>
-                            <li><span class="ms">jyong[at]turing.ac.uk</span></li>
-                            <li><span class="ms">tim.claridge[at]chem.ox.ac.uk</span></li>
-                            <li>(we can forward anything to Ēriks if needed)</li>
-                        </ul>
+                        <p>If there are urgent bugs that need to be fixed, please contact Tim at: <span class="ms">tim.claridge[at]chem.ox.ac.uk</span></p>
+
                         <p>Finally, if you're interested, we published a paper describing this website (<a href="https://doi.org/10.1021/acs.analchem.1c04964">DOI: 10.1021/acs.analchem.1c04964</a>).
                     </div>
                 </div> <!-- }}}2 --->
